--- a/exercicio-32/index.html
+++ b/exercicio-32/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Exercício 32</title>
 </head>
 <h1>Consultório Odontológico</h1>
 
