fiz: corrige id do input idade

--- a/exercicio-35/index.html
+++ b/exercicio-35/index.html
@@ -15,7 +15,7 @@
         </p>
         <p>
             Idade:
-            <input type="number" id="inidade" min="0" required>
+            <input type="number" id="inIdade" min="0" required>
             <input type="submit" value="Adicionar">
         </p>
         <input type="button" value="Listar Todos" id="btListar">
